# gcal-mcp-remote

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRIVACY.md  README.md  client_patch.py  pyproject.toml  requirements.txt  server.py
.claude/: settings.json
.claude/agents/: calendar-manager.md
.claude/hooks/: no-main-commit.sh
.claude/skills/calendar-qa/: SKILL.md
.github/workflows/: publish.yml
auth/: discovery_auth.py  provider.py  storage.py
src/gcal_mcp_remote/: __init__.py  __main__.py  client_patch.py  server.py
src/gcal_mcp_remote/auth/: discovery_auth.py  provider.py  storage.py
systemd/: gcal-mcp-remote.service
