[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcal-mcp-remote-ldraney"
version = "0.1.0"
description = "Remote MCP connector wrapping gcal-mcp with Google OAuth 2.0 over Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "gcal-mcp-ldraney>=0.1.0",
    "cryptography>=46.0",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "uvicorn>=0.34",
]

[project.scripts]
gcal-mcp-remote = "gcal_mcp_remote.server:main"

[tool.setuptools.packages.find]
where = ["src"]
