[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcal-mcp-remote-ldraney"
version = "0.1.3"
description = "Remote MCP connector wrapping gcal-mcp with Google OAuth 2.0 over Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Lucas Draney"}]
keywords = ["google-calendar", "mcp", "oauth", "remote", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]
dependencies = [
    "gcal-mcp-ldraney>=0.1.0",
    "cryptography>=46.0",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "uvicorn>=0.34",
]

[project.urls]
Repository = "https://github.com/ldraney/gcal-mcp-remote"
Issues = "https://github.com/ldraney/gcal-mcp-remote/issues"

[project.scripts]
gcal-mcp-remote = "gcal_mcp_remote.server:main"

[tool.setuptools.packages.find]
where = ["src"]
